core/codegen/tests/ui-fail-nightly/catch.stderr
error[E0463]: can't find crate for `rocket`
 --> tests/ui-fail-nightly/catch.rs:1:14
  |
1 | #[macro_use] extern crate rocket;
  |              ^^^^^^^^^^^^^^^^^^^^ can't find crate

error[E0428]: the name `e5` is defined multiple times
  --> tests/ui-fail-nightly/catch.rs:27:1
   |
24 | fn e5(_request: &Request) { }
   | ------------------------- previous definition of the value `e5` here
...
27 | fn e5(_request: &Request) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ `e5` redefined here
   |
   = note: `e5` must be defined only once in the value namespace of this module

error: cannot find attribute `catch` in this scope
  --> tests/ui-fail-nightly/catch.rs:29:3
   |
29 | #[catch(404)]
   |   ^^^^^
   |
help: consider importing one of these attribute macros
   |
 3 + use rkt::catch;
   |
 3 + use rkt_codegen::catch;
   |

error: cannot find attribute `catch` in this scope
  --> tests/ui-fail-nightly/catch.rs:26:3
   |
26 | #[catch(400, message = "foo")]
   |   ^^^^^
   |
help: consider importing one of these attribute macros
   |
 3 + use rkt::catch;
   |
 3 + use rkt_codegen::catch;
   |

error: cannot find attribute `catch` in this scope
  --> tests/ui-fail-nightly/catch.rs:23:3
   |
23 | #[catch(600)]
   |   ^^^^^
   |
help: consider importing one of these attribute macros
   |
 3 + use rkt::catch;
   |
 3 + use rkt_codegen::catch;
   |

error: cannot find attribute `catch` in this scope
  --> tests/ui-fail-nightly/catch.rs:20:3
   |
20 | #[catch(99)]
   |   ^^^^^
   |
help: consider importing one of these attribute macros
   |
 3 + use rkt::catch;
   |
 3 + use rkt_codegen::catch;
   |

error: cannot find attribute `catch` in this scope
  --> tests/ui-fail-nightly/catch.rs:17:3
   |
17 | #[catch(code = 404)]
   |   ^^^^^
   |
help: consider importing one of these attribute macros
   |
 3 + use rkt::catch;
   |
 3 + use rkt_codegen::catch;
   |

error: cannot find attribute `catch` in this scope
  --> tests/ui-fail-nightly/catch.rs:14:3
   |
14 | #[catch(code = "404")]
   |   ^^^^^
   |
help: consider importing one of these attribute macros
   |
 3 + use rkt::catch;
   |
 3 + use rkt_codegen::catch;
   |

error: cannot find attribute `catch` in this scope
  --> tests/ui-fail-nightly/catch.rs:11:3
   |
11 | #[catch("404")]
   |   ^^^^^
   |
help: consider importing one of these attribute macros
   |
 3 + use rkt::catch;
   |
 3 + use rkt_codegen::catch;
   |

error: cannot find attribute `catch` in this scope
 --> tests/ui-fail-nightly/catch.rs:8:3
  |
8 | #[catch(404)]
  |   ^^^^^
  |
help: consider importing one of these attribute macros
  |
3 + use rkt::catch;
  |
3 + use rkt_codegen::catch;
  |

error: cannot find attribute `catch` in this scope
 --> tests/ui-fail-nightly/catch.rs:5:3
  |
5 | #[catch(404)]
  |   ^^^^^
  |
help: consider importing one of these attribute macros
  |
3 + use rkt::catch;
  |
3 + use rkt_codegen::catch;
  |
